Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87791

stocqt example does not show data

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.0.0 RC
    • 6.0.0 Beta1
    • Examples and Demos
    • None
    • mingw810_64
    • 4e2b9e2496852bee2608268a600d3a8797997636 (qt/qtdoc/dev)

      Run the stocqt example.
      It's in Examples\Qt-6.0.0\demos\stocqt\CMakeLists.txt of an installation.
      It does not display data. Instead, it writes to the command line:

      XMLHttpRequest: Using GET on a local file is disabled by default.
      Set QML_XHR_ALLOW_FILE_READ to 1 to enable this feature.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            veshivas Venugopal Shivashankar
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes