Example: Set the variable to read the XML file

Without the variable, the XmlHttpRequest cannot
read the XML file.

Fixes: QTBUG-87791
Change-Id: Icf699d8bbd4ec1921dadfd3331a024e04f7f5416
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>